<resources>
    <string name="app_name">ME Diary</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_vat">VAT Number</string>
    <string name="prompt_credit_card_number">Credit Card</string>
    <string name="prompt_credit_card_cvv">CVV</string>
    <string name="prompt_credit_card_expiration">Expiration Date</string>

    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_show_menu">Menu</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_show_order">ShowOrderActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="other_credit_cards">Other Credit Cards</string>
    <string name="primary_credit_card">Primary Credit Card</string>
    <string name="user_image">user image</string>
    <string name="title_activity_test_fab">TestFABActivity</string>
    <string name="title_activity_change_primary_credit_card">ChangePrimaryCreditCardActivity
    </string>
    <string name="register">Register</string>
    <string name="clear_cart">Clear cart</string>
    <string name="loading">Loading...</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_mood">Mood</string>
    <string name="title_event">Event</string>
    <string name="title_drug">Drug</string>

    <string name="lbl_name">Title</string>
    <string name="lbl_des">Description</string>

    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="hint_dob">Enter D.O.B (DD/MM/YYYY)</string>
    <string name="hint_password">Password</string>
    <string name="hint_gender">I am</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_sign_up">Sign Up !!</string>
    <string name="err_msg_name">Please enter a Name</string>
    <string name="err_msg_required">Valid Input Required</string>
    <string name="err_msg_email">Please enter a Valid Email</string>
    <string name="err_msg_password">Enter a Password</string>
    <string name="err_msg_dob">Enter a valid D.O.B</string>


</resources>
